# numericxx

./: .clang-format  .gitignore  CMakeLists.txt  dev.cpp  main.cpp
include/: numericxx.hpp
include/constants/: constants.hpp
include/ode/: forward_euler.hpp  leapfrog.hpp  ode.hpp  rk2.hpp  rk4.hpp
